# self-improving-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.codex/agents/critic/: AGENTS.md
.codex/agents/evaluator/: AGENTS.md
.codex/plans/: 2026-04-05-minimal-agent-harness.md
.codex/skills/agent-cycle/: SKILL.md
.codex/skills/diagnose-agent/: SKILL.md
.codex/skills/improve-agent/: SKILL.md
.everything-automate/plans/: 2026-04-07-artifact-driven-prompt-pipeline.md  2026-04-07-local-sub-agent-prompts.md  2026-04-08-agent-cycle-redesign.md  2026-04-08-self-improving-agent-output-contract.md  2026-04-08-self-improving-agent-qa-fixes.md  2026-04-08-simple-prompt-agent-reset.md  2026-04-09-self-improving-agent-run-reset.md  2026-04-09-self-improving-agent-timeout-failure.md
agents/: __init__.py  agent_cycle_state.py
agents/self_improving_agent/: AGENTS.md  __init__.py  run.py
agents/self_improving_agent/prompts/: system.txt
agents/simple_prompt_agent/: AGENTS.md  __init__.py  config.py  run.py
agents/simple_prompt_agent/prompts/: system.txt
benchmarks/: todo-list-project.txt
experiments/: current-best.json  variant-openrouter.json
experiments/candidates/: openrouter-free-first.json
src/minimal_agent_harness/: __init__.py  __main__.py  artifacts.py  backends.py  benchmark.py  cli.py  config.py  critic.py  engine.py  evaluator.py  experiments.py  generator.py  pipeline.py  prompt_pipeline.py  self_improvement.py  stage_prompts.py  tools.py  types.py
src/minimal_agent_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_agent_cycle_state.py  test_backends.py  test_benchmark.py  test_cli.py  test_config.py  test_experiments.py  test_prompt_pipeline.py  test_runner.py  test_self_improvement.py  test_self_improving_agent.py  test_simple_prompt_agent.py  test_tools.py
(+9 files in other folders)
