[project]
name = "minimal-agent-harness"
version = "0.1.0"
description = "Small, testable task-agent harness"
requires-python = ">=3.11"
dependencies = ["openai>=1.100.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
minimal_agent_harness = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
