[project]
name = "self-improving-agent"
version = "0.2.0"
description = "Simple prompt agent repo with Codex orchestration"
requires-python = ">=3.11"
dependencies = ["openai>=1.100.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
simple-prompt-agent = "agents.simple_prompt_agent.run:main"
self-improving-agent = "agents.self_improving_agent.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]

[tool.setuptools.package-data]
"agents.simple_prompt_agent" = ["prompts/*.txt"]
"agents.self_improving_agent" = ["prompts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
